# Math4Fin

./: .gitignore  README.md  pyproject.toml  start_jupyter.sh
BSM/: BSM.md  Greeks.md  Greeks.py  Pricing.py
data/: yfinance.py
utils/: stats.py
